--- a/configure.in
+++ b/configure.in
@@ -30,6 +30,7 @@ AC_CHECK_FUNCS([ \
     strtoll \
 ])
 
-AC_CONFIG_FILES([Makefile
-				src/Makefile])
+AC_CONFIG_FILES([Makefile \
+                 src/Makefile \
+                 tests/Makefile])
 AC_OUTPUT
