--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libbuf.la
 libbuf_ladir = $(includedir)
-libbuf_la_LDFLAGS = -version-info 1:0:0
+libbuf_la_LDFLAGS = -release @PACKAGE_VERSION@
 libbuf_la_SOURCES = buf.c
 libbuf_la_HEADERS = libbuf.h 
