--- a/configure.in
+++ b/configure.in
@@ -6,6 +6,7 @@ AC_INIT(libbuf, 1.1.1)
 AC_CONFIG_SRCDIR([src/buf.c])
 AM_INIT_AUTOMAKE([foreign no-dist no-installinfo no-installman -Wall])
 AC_CONFIG_HEADER([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 
 # Checks for programs.
 AC_PROG_CC
@@ -31,6 +32,7 @@ AC_CHECK_FUNCS([ \
 ])
 
 AC_CONFIG_FILES([Makefile \
+                 libbuf.pc \
                  src/Makefile \
                  tests/Makefile])
 AC_OUTPUT
