--- a/configure.in
+++ b/configure.in
@@ -31,6 +31,19 @@ AC_CHECK_FUNCS([ \
     strtoll \
 ])
 
+#
+# debug option 
+#
+AC_ARG_ENABLE(
+    [debug],
+    AS_HELP_STRING([--enable-debug], [enable debug build.]),
+    [ENABLE_DEBUG=$enableval], [ENABLE_DEBUG=no]
+)
+AS_IF([test "$ENABLE_DEBUG" != "no"],
+    [ AC_DEFINE([DEBUG], [1], [Define if you enabled debug]) ],
+    [ AC_SUBST([CFLAGS], ["-O3"]) ]
+)
+
 AC_CONFIG_FILES([Makefile \
                  libbuf.pc \
                  src/Makefile \
