--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.61)
-AC_INIT(libbuf, 1.1.2)
+AC_INIT(libbuf, 1.2.0)
 AC_CONFIG_SRCDIR([src/buf.c])
 AM_INIT_AUTOMAKE([foreign no-dist no-installinfo no-installman -Wall])
 AC_CONFIG_HEADER([config.h])
@@ -19,6 +19,7 @@ AC_CHECK_HEADERS([unistd.h stdlib.h stddef.h stdint.h string.h errno.h])
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_SIZE_T
+AC_CHECK_TYPES([ptrdiff_t, size_t, ssize_t])
 
 # Checks for library functions.
 AC_FUNC_REALLOC
@@ -28,7 +29,7 @@ AC_CHECK_FUNCS([ \
     free \
     memmove \
     memcpy \
-    strtoll \
+    strstr \
 ])
 
 #
